# r3ply

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  CHANGELOG.md  CLA.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
apps/cli/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.js
apps/cli/src/: cmd.ts  index.ts  lib.ts  util.ts
apps/cli/test/: cmd.test.ts  lib.test.ts  markov.test.ts
apps/cloudflare-worker/: .gitignore  CHANGELOG.md  Caddyfile  README.md  package-lock.json  package.json  r3ply.config.toml  tsconfig.json  vitest.config.mts  worker-configuration.d.ts  wrangler.toml
apps/cloudflare-worker/schema/: comments_via_email.sql  pending_comments.sql
apps/cloudflare-worker/src/: api.ts  cloudflare-r3ply.ts  util.ts  (+3 more)
crates/r3ply-wasm/: CHANGELOG.md  Cargo.toml  README.md  bundler-wasm-patch.js  package.json
crates/r3ply-wasm/pkg/: package.json
crates/r3ply-wasm/src/: lib.rs
site/: CHANGELOG.md  README.md  commenting-instructions.md  config.toml  package-lock.json  package.json  wrangler.toml
site/.r3ply/: r3ply.system.config.toml
site/content/: _index.md  demo.md  feeds.md  taxonomy.md
site/css/: input.css
site/syntaxes-and-highlight-themes/: material-darker-w-json-key-override.json  material-darker-w-json-key-override.tmTheme
site/templates/: anchor-link.html  base.html  comment.html  comments.html  doc.html  taxonomy_list.html  taxonomy_single.html
test-data/eml/: index.js
tools/: mail-parser-ts-bindings-0.9.1.tgz
(+265 files in other folders)
