[package]
name = "r3ply-wasm"
version = "0.0.1"
edition = "2021"

[dependencies]
ammonia = "4.0.0"
html-escape = "0.2.13"
mail-builder = { version = "0.4.2", default-features = false }
mail-parser = { version = "0.9.1", features = ["serde_support"] }
pulldown-cmark = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
tera = "=2.0.0-alpha.7"
tera-contrib = { version = "=0.2.0-alpha.5", features = [
  "date",
  "urlencode",
  "json",
] }
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
